Adding edit_as_mod

--- a/translations/en.json
+++ b/translations/en.json
@@ -58,6 +58,7 @@
   "send_message": "Send Message",
   "message": "Message",
   "edit": "Edit",
+  "edit_as_mod": "Edit as mod",
   "add": "Add",
   "reply": "Reply",
   "more": "More",
